name:                persistent-postgresql-query-in-progress-issue
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/persistent-postgresql-query-in-progress-issue#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable persistent-postgresql-query-in-progress-issue
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , persistent-postgresql
                     , monad-logger
                     , bytestring
                     , resource-pool
                     , time
                     , postgresql-simple
                     , resourcet
                     , unliftio
                     , text
